--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,23 @@
 .App {
     --header_height: 60px;
+    font-family: Montserrat,sans-serif;
 }
 
 .hw {
-
+    border-bottom: 1px solid #d9d9d9;
+    border-top: 1px solid #d9d9d9;
+    margin: 30px 0;
+    padding: 32px 70px;
+    transition: .2s ease-in-out;
 }
 
 .hwTitle {
-
+    color: #000;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 27px;
+    margin: 10px auto;
+    max-width: 1280px;
+    padding: 0 20px;
 }
