--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,73 @@
 .sidebar {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+
+
 }
 
 .sidebar.open {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: white;
+    color: #FFFFFF;
+    width: 20%;
+    border: none;
+    z-index: 999;
+
 }
 
 .background {
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    padding-top: 60px;
 }
 
 .nav a {
+    text-decoration: none;
+    font-size: 22px;
+    transition: 0.3s;
+
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
 .nav a.active {
+    text-decoration-line: underline;
+    color: #0059B2;
 }
+
 .close {
+    position: absolute;
+    top: 3%;
+    right: 25px;
+    border: none;
+    outline: none;
+    background-color: #FFFFFF;
 }
 
 .close img {
+    background-color: #FFFFFF;
+}
+ a:visited {
+    color: black;
 }
