--- a/src/s2-homeworks/hw06/HW6.module.css
+++ b/src/s2-homeworks/hw06/HW6.module.css
@@ -1,5 +1,10 @@
 .buttonsContainer {
+    display: flex;
+    gap: 10px;
+    padding-top: 10px;
 }
 
 .editableSpanContainer {
+    border: none;
+    outline: none;
 }
