--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,5 @@ body {
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    monospace, 'Montserrat', sans-serif;;
 }
