--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -6,8 +6,6 @@
     top: 0;
     left: 0;
     overflow-x: hidden; /* Disable horizontal scroll */
-
-
 }
 
 .sidebar.open {
@@ -18,7 +16,6 @@
     width: 20%;
     border: none;
     z-index: 999;
-
 }
 
 .background {
@@ -41,10 +38,11 @@
 }
 
 .nav a {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     text-decoration: none;
     font-size: 22px;
     transition: 0.3s;
-
 }
 
 .nav a:hover {
@@ -68,6 +66,7 @@
 .close img {
     background-color: #FFFFFF;
 }
- a:visited {
+
+a:visited {
     color: black;
 }
