--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,4 +1,5 @@
 .radio {
+
 }
 
 .radio::before {
@@ -11,5 +12,9 @@
 .label {
 }
 
+
 .options {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
