--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -1,8 +1,15 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    gap: 20px;
 }
 
 .wrapper {
+    display: flex;
+    align-items: center;
 }
 
 .number {
+    padding: 20px 20px;
 }
