--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -9,6 +9,9 @@
     margin: 30px 0;
     padding: 32px 70px;
     transition: .2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .hwTitle {
