--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -24,3 +24,13 @@
     max-width: 1280px;
     padding: 0 20px;
 }
+
+.loading {
+    position: absolute;
+    width: 51%;
+    height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.7);
+}
