--- a/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
+++ b/src/s2-homeworks/hw15/common/c9-SuperPagination/SuperPagination.module.css
@@ -1,11 +1,14 @@
 .pagination {
     display: flex;
+    gap: 10px;
+    align-items: baseline;
 }
 
 .text1 {
-
+    text-transform: capitalize;
+    font: normal normal 400 14px/3 Roboto;
 }
 
 .text2 {
-
+   font: normal normal 400 14px/3 Roboto;
 }
